Fix spacing on the page of the white box

--- a/src/views/Description/Description.css
+++ b/src/views/Description/Description.css
@@ -25,8 +25,8 @@ li {
 .item-description {
   text-align: left;
   vertical-align: center;
-  margin-left: 20%;
-  margin-right: 20%;
+  margin-left: 10%;
+  margin-right: 10%;
   margin-top: 5%;
   margin-bottom: 25%;
   background: white;
